[update] text_summ method1,2,3,4 py&ipynb files

--- a/code/text_summarization/textsumm_method1.ipynb
+++ b/code/text_summarization/textsumm_method1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "H-8f48Oxetyi"
       },
@@ -19,27 +19,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "opxC6SYMisdl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "\"file_path = 'C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\github\\\\bitamin_auto_readme_generator\\\\data\\\\object_detection\\\\output\\\\ocr_samples_txt\\\\netflix_text.txt'\\n\\nwith open(file_path, 'r', encoding='utf-8') as file:\\n        text = file.read()\""
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "file_path = 'C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\github\\\\bitamin_auto_readme_generator\\\\data\\\\object_detection\\\\output\\\\ocr_samples_txt\\\\netflix_text.txt'\n",
+        "#파일 1개 테스트용\n",
+        "'''file_path = 'C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\github\\\\bitamin_auto_readme_generator\\\\data\\\\object_detection\\\\output\\\\ocr_samples_txt\\\\netflix_text.txt'\n",
         "\n",
         "with open(file_path, 'r', encoding='utf-8') as file:\n",
-        "        text = file.read()"
+        "        text = file.read()'''"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "XXCSOd6ldbz4"
       },
       "outputs": [],
       "source": [
-        "api_key_filepath = \"C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\비타민NLP_240701\\\\text_summarization\\\\openai_api_key.json\"\n",
+        "api_key_filepath = \"../assets/openai_api_key.json\"\n",
         "with open(api_key_filepath, 'r') as f:\n",
         "    api_key = json.load(f)\n",
         "api_key = api_key['OPENAI_API_KEY']"
@@ -91,12 +103,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def extract_5pages(text, marker='<p.6>'):\n",
-        "    end_marker = text.find('<p.6>')\n",
+        "def extract_5pages(text, marker='<p.06>'):\n",
+        "    end_marker = text.find('<p.06>')\n",
         "    if end_marker != -1:\n",
         "        text5 = text[:end_marker]\n",
         "    else:\n",
@@ -106,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -142,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 9,
       "metadata": {
         "id": "De0eBjj0BmuA"
       },
@@ -171,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 10,
       "metadata": {
         "id": "_ifc44eL-oka"
       },
@@ -223,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -260,7 +272,7 @@
         "\n",
         "    <subject>Korea</subject>\n",
         "    <team>이하나, 김하니</team>\n",
-        "    <index>Seasons in Korea>\n",
+        "    <index>Seasons in Korea, Animals in Korea</index>\n",
         "    \n",
         "    <main>Seasons in Korea</main>\n",
         "    <sub>봄</sub> <content>한국의 봄은 3월에서 5월까지 지속되며, 온화한 기온과 함께 벚꽃이 만개하는 시기입니다. 이 시기에는 다양한 봄꽃 축제가 열리며, 사람들이 야외 활동을 즐기기에 좋은 날씨입니다.</content> <page>1</page>\n",
@@ -287,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -329,7 +341,7 @@
         "        with open(file_path, 'r', encoding='utf-8') as file:\n",
         "            text = file.read()\n",
         "\n",
-        "        text5 = extract_5pages(text, marker='<p.6>')\n",
+        "        text5 = extract_5pages(text, marker='<p.06>')\n",
         "        extracted_info = extract_info(text5)  \n",
         "        main_topics_list = extract_main_topics(extracted_info)\n",
         "        details = extract_details(text, main_topics_list)\n",
