--- a/code/text_summarization/textsumm_method2.ipynb
+++ b/code/text_summarization/textsumm_method2.ipynb
@@ -19,11 +19,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 2,
       "metadata": {
         "id": "opxC6SYMisdl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "\"#파일 1개 테스트용\\nfile_path = 'C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\github\\\\bitamin_auto_readme_generator\\\\data\\\\object_detection\\\\output\\\\ocr_samples_txt\\\\trading_text.txt'\\n\\nwith open(file_path, 'r', encoding='utf-8') as file:\\n        text = file.read()\""
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "'''#파일 1개 테스트용\n",
         "file_path = 'C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\github\\\\bitamin_auto_readme_generator\\\\data\\\\object_detection\\\\output\\\\ocr_samples_txt\\\\trading_text.txt'\n",
@@ -40,7 +51,7 @@
       },
       "outputs": [],
       "source": [
-        "api_key_filepath = \"C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\비타민NLP_240701\\\\text_summarization\\\\openai_api_key.json\"\n",
+        "api_key_filepath = \"../assets/openai_api_key.json\"\n",
         "with open(api_key_filepath, 'r') as f:\n",
         "    api_key = json.load(f)\n",
         "api_key = api_key['OPENAI_API_KEY']"
@@ -204,7 +215,7 @@
         "\n",
         "    <subject>Korea</subject>\n",
         "    <team>이하나, 김하니</team>\n",
-        "    <index>Seasons in Korea>\n",
+        "    <index>Seasons in Korea, Animals in Korea</index>\n",
         "    \n",
         "    <main>Seasons in Korea</main>\n",
         "    <sub>봄</sub> <content>한국의 봄은 3월에서 5월까지 지속되며, 온화한 기온과 함께 벚꽃이 만개하는 시기입니다. 이 시기에는 다양한 봄꽃 축제가 열리며, 사람들이 야외 활동을 즐기기에 좋은 날씨입니다.</content> <page>1</page>\n",
@@ -236,23 +247,6 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\arima_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\asiancup_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\barbot_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\blind_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\braintumor_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\cartoon_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\disease_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\energy_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\hangang_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\insideout_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\interior_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\kospi_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\lier-detector_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\netflix_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\restaurant_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\trading_text.txt'.\n",
-            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\var_text.txt'.\n",
             "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\webtoon_text.txt'.\n"
           ]
         }
@@ -286,13 +280,6 @@
         "\n",
         "        print(f\"Summarized text has been saved to '{output_file_path}'.\")\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
