--- a/code/text_summarization/textsumm_method3.ipynb
+++ b/code/text_summarization/textsumm_method3.ipynb
@@ -44,7 +44,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "api_key_filepath = \"C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\비타민NLP_240701\\\\text_summarization\\\\openai_api_key.json\"\n",
+        "api_key_filepath = \"../assets/openai_api_key.json\"\n",
         "with open(api_key_filepath, 'r') as f:\n",
         "    api_key = json.load(f)\n",
         "api_key = api_key['OPENAI_API_KEY']"
@@ -96,7 +96,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def extract_info(text, marker='<p.6>'):\n",
+        "def extract_info(text, marker='<p.06>'):\n",
         "    end_marker = text.find(marker)\n",
         "\n",
         "    if end_marker != -1:\n",
@@ -346,7 +346,7 @@
         "        with open(file_path, 'r', encoding='utf-8') as file:\n",
         "            text = file.read()\n",
         "\n",
-        "        extracted_info = extract_info(text, marker='<p.6>')  \n",
+        "        extracted_info = extract_info(text, marker='<p.06>')  \n",
         "        main_topics_list = extract_main_topics(extracted_info)\n",
         "        divided_text = divide_text(extracted_info, main_topics_list, text)\n",
         "        summarized_text = summarize(divided_text, main_topics_list)\n",
